<resources>
    <string name="app_name">CoronaVirus-Tunisie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="register">Inscription</string>
    <string name="tag">Rejoignons-nous</string>
    <string name="tag1">Bienvenue! \nConnectez-vous pour accéder à CoronaVirus-Tunisie</string>

    <string name="swipe_right_for_login">Balayez vers la droite pour vous connecter</string>
    <string name="swipe_left_for_registerr">Balayez vers la gauche pour vous inscrire</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
