<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/tv_subtitle"
    android:layout_marginStart="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginBottom="56dp"
    android:fontFamily="@font/indigo_daisy"
    android:text="@string/app_name"
    android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt"
        android:layout_alignEnd="@+id/bt"
        android:layout_alignRight="@+id/bt"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginRight="-11dp"
        android:layout_marginBottom="500dp"
        android:src="@drawable/stayhome" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="365dp"
        android:layout_height="175dp"
        android:layout_above="@+id/textview_register"
        android:layout_below="@+id/bt"
        android:layout_alignEnd="@+id/bt"
        android:layout_alignRight="@+id/bt"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="41dp"
        app:srcCompat="@drawable/stayhome" />

    <TextView
    android:id="@+id/tv_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/t1"
    android:layout_marginStart="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginBottom="62dp"
    android:fontFamily="@font/roboto_regular"
    android:text="@string/tag1"
    android:textSize="17sp" />

<EditText
    android:id="@+id/t1"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_above="@id/t2"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="13dp"
    android:background="@drawable/et_custom"
    android:fontFamily="@font/roboto_regular"
    android:hint="@string/e_mail"
    android:inputType="textEmailAddress"
    android:padding="15dp"
    android:textSize="15sp" />

<EditText
    android:id="@+id/t2"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_centerInParent="true"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/et_custom"
    android:fontFamily="@font/roboto_regular"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="15dp"
    android:textSize="15sp" />

    <Button
        android:id="@+id/bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/textview_register"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

<TextView
    android:id="@+id/textview_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/swipe_left_for_registerr"
    android:textSize="15sp"
    android:fontFamily="@font/roboto_regular"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="20dp"/>


</RelativeLayout>